QSDM/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qsdm
  labels:
    name: qsdm
    app: qsdm
